前回のエンジンで実装した基盤部分を移植

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Engine/Base/Device/DirectXDevice.cpp
+/Engine/Base/Device/DirectXDevice.h
