--- a/K-MS_Engine.vcxproj
+++ b/K-MS_Engine.vcxproj
@@ -86,8 +86,8 @@
     <ClCompile Include="Engine\Base\Command\MainCommand.cpp" />
     <ClCompile Include="Engine\Base\Command\ParticleCommand.cpp" />
     <ClCompile Include="Engine\Base\Command\SpriteCommand.cpp" />
-    <ClCompile Include="Engine\Base\DescriptorHeaps\IDescriptorHeap.cpp" />
     <ClCompile Include="Engine\Base\DescriptorHeaps\DSV.cpp" />
+    <ClCompile Include="Engine\Base\DescriptorHeaps\IDescriptorHeap.cpp" />
     <ClCompile Include="Engine\Base\DescriptorHeaps\RTV.cpp" />
     <ClCompile Include="Engine\Base\DescriptorHeaps\SRV.cpp" />
     <ClCompile Include="Engine\Base\Device\DirectXDevice.cpp" />
@@ -115,13 +115,14 @@
     <ClInclude Include="Engine\Base\Command\MainCommand.h" />
     <ClInclude Include="Engine\Base\Command\ParticleCommand.h" />
     <ClInclude Include="Engine\Base\Command\SpriteCommand.h" />
-    <ClInclude Include="Engine\Base\DescriptorHeaps\IDescriptorHeap.h" />
     <ClInclude Include="Engine\Base\DescriptorHeaps\DSV.h" />
+    <ClInclude Include="Engine\Base\DescriptorHeaps\IDescriptorHeap.h" />
     <ClInclude Include="Engine\Base\DescriptorHeaps\RTV.h" />
     <ClInclude Include="Engine\Base\DescriptorHeaps\SRV.h" />
     <ClInclude Include="Engine\Base\Device\DirectXDevice.h" />
     <ClInclude Include="Engine\Base\DirectXCommon.h" />
     <ClInclude Include="Engine\Base\PSO\PSO.h" />
+    <ClInclude Include="Engine\Base\ResourceStruct.h" />
     <ClInclude Include="Engine\Base\WinAPIManager.h" />
     <ClInclude Include="Engine\Input\Input.h" />
     <ClInclude Include="Engine\Math\Vector2.h" />
