--- a/K-MS_Engine.vcxproj.filters
+++ b/K-MS_Engine.vcxproj.filters
@@ -110,6 +110,9 @@
       <Filter>Engine\Transform</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Math\Vector4.cpp" />
+    <ClCompile Include="Engine\Resource\Material\Material.cpp" />
+    <ClCompile Include="Engine\Resource\Texture\Texture.cpp" />
+    <ClCompile Include="Engine\Resource\Texture\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="App">
@@ -286,6 +289,9 @@
       <Filter>Engine\Transform</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Math\Vector4.h" />
+    <ClInclude Include="Engine\Resource\Material\Material.h" />
+    <ClInclude Include="Engine\Resource\Texture\Texture.h" />
+    <ClInclude Include="Engine\Resource\Texture\TextureManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Externals\imgui\.editorconfig">
@@ -297,10 +303,66 @@
     <None Include="Externals\imgui\.gitignore">
       <Filter>Externals\ImGui</Filter>
     </None>
+    <None Include="Engine\Resource\Samples\Box\Box.mtl" />
+    <None Include="Engine\Resource\Samples\cube\cube.mtl" />
+    <None Include="Engine\Resource\Samples\Enemy\Body\MonsterBody.mtl" />
+    <None Include="Engine\Resource\Samples\Leeme\Leeme.mtl" />
+    <None Include="Engine\Resource\Samples\Line\Line.mtl" />
+    <None Include="Engine\Resource\Samples\Plane\Plane.mtl" />
+    <None Include="Engine\Resource\Samples\Player\R_Arm\float_R_arm.mtl" />
+    <None Include="Engine\Resource\Samples\Player\L_Arm\float_L_arm.mtl" />
+    <None Include="Engine\Resource\Samples\Player\Head\float_Head.mtl" />
+    <None Include="Engine\Resource\Samples\Player\Body\float_Body.mtl" />
+    <None Include="Engine\Resource\Samples\Player\Weapon\Weapon.mtl" />
+    <None Include="Engine\Resource\Samples\SkyDome\SkyDome.mtl" />
+    <None Include="Engine\Resource\Samples\Sphere\Sphere.mtl" />
+    <None Include="Engine\Resource\Samples\Stage\Stage.mtl" />
+    <None Include="Engine\Resource\Shader\Object3D.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Externals\imgui\LICENSE.txt">
       <Filter>Externals\ImGui</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Engine\Resource\Samples\Audio\Alarm01.wav" />
+    <Media Include="Engine\Resource\Samples\Audio\SceneTransition.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="Engine\Resource\Samples\Box\Box.obj" />
+    <Object Include="Engine\Resource\Samples\cube\cube.obj" />
+    <Object Include="Engine\Resource\Samples\Enemy\Body\MonsterBody.obj" />
+    <Object Include="Engine\Resource\Samples\Leeme\Leeme.obj" />
+    <Object Include="Engine\Resource\Samples\Line\Line.obj" />
+    <Object Include="Engine\Resource\Samples\Plane\Plane.obj" />
+    <Object Include="Engine\Resource\Samples\Player\R_Arm\float_R_arm.obj" />
+    <Object Include="Engine\Resource\Samples\Player\L_Arm\float_L_arm.obj" />
+    <Object Include="Engine\Resource\Samples\Player\Head\float_Head.obj" />
+    <Object Include="Engine\Resource\Samples\Player\Body\float_Body.obj" />
+    <Object Include="Engine\Resource\Samples\Player\Weapon\Weapon.obj" />
+    <Object Include="Engine\Resource\Samples\SkyDome\SkyDome.obj" />
+    <Object Include="Engine\Resource\Samples\Sphere\Sphere.obj" />
+    <Object Include="Engine\Resource\Samples\Stage\Stage.obj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Engine\Resource\Samples\Box\uvChecker.png" />
+    <Image Include="Engine\Resource\Samples\cube\cube.png" />
+    <Image Include="Engine\Resource\Samples\Enemy\Body\EnemyBodyTex.png" />
+    <Image Include="Engine\Resource\Samples\Player\R_Arm\ArmTex.png" />
+    <Image Include="Engine\Resource\Samples\Player\L_Arm\ArmTex.png" />
+    <Image Include="Engine\Resource\Samples\Player\Head\HeadTex.png" />
+    <Image Include="Engine\Resource\Samples\Player\Body\BodyTex.png" />
+    <Image Include="Engine\Resource\Samples\Player\Weapon\WeaponTex.png" />
+    <Image Include="Engine\Resource\Samples\Texture\NumberSheets.png" />
+    <Image Include="Engine\Resource\Samples\SkyDome\Sky.png" />
+    <Image Include="Engine\Resource\Samples\Sphere\white2x2.png" />
+    <Image Include="Engine\Resource\Samples\Stage\GroundTex.png" />
+    <Image Include="Engine\Resource\Samples\Texture\AlphabetSheet.png" />
+    <Image Include="Engine\Resource\Samples\Texture\circle.png" />
+    <Image Include="Engine\Resource\Samples\Texture\ColorSample.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Engine\Resource\Shader\Object3D.PS.hlsl" />
+    <FxCompile Include="Engine\Resource\Shader\Object3D.VS.hlsl" />
   </ItemGroup>
 </Project>
